make the footer responsive; the search field is a little out of place will fix later

--- a/P02 - Company/css/footer.css
+++ b/P02 - Company/css/footer.css
@@ -6,7 +6,7 @@
 
 .footer-nav {
 	margin-top: 1.5rem;
-	widows: 100%;
+	width: 100%;
 }
 
 .footer-nav-item {
@@ -53,4 +53,37 @@ hr {
 	height: 1px;
 	margin-top: 3rem;
 	border: none;
+}
+
+
+/*--------------------------MEDIA QUERIES------------------------------*/
+
+@media screen and (max-width: 57em) {
+
+	.footer-nav {
+		flex-direction: column;
+	}
+
+	.footer-nav-item {
+		display: block;
+		text-align: left;
+		font-size: 0.78rem;
+		margin-bottom: 1rem;
+		margin-left: 2rem;
+	}
+
+	#search-input, input[type=search] {
+		letter-spacing: 0.08rem;
+	  	padding-bottom: 0.25rem;
+	  	width: 12.5rem;
+	 	margin: 0;
+	 	padding-left: 0;
+	  	/*border: none;*/
+	  	text-align: left;
+	}
+
+	#search, input {
+		font-size: 0.78rem;
+	}
+
 }
